add_subdirectory(integrate)
add_subdirectory(01_PW)
add_subdirectory(02_NAO_Gamma)
add_subdirectory(03_NAO_multik)
add_subdirectory(04_LJ_DP)
add_subdirectory(05_rtTDDFT)
add_subdirectory(06_SDFT)
add_subdirectory(07_OFDFT)
add_subdirectory(08_EXX)
add_subdirectory(10_others)
add_subdirectory(11_PW_GPU)

if(ENABLE_DEEPKS)
	add_subdirectory(09_DeePKS)
endif()
